[gd_scene load_steps=7 format=3 uid="uid://c7h5u5pfecfnh"]

[ext_resource type="Script" path="res://Scenes/OnBoard/DialogPlayer.gd" id="1_uu3da"]
[ext_resource type="PackedScene" uid="uid://febouepvqdew" path="res://Assets/Cutscenes/Backgrounds/002_ShotglassWindow.tscn" id="3_7121y"]
[ext_resource type="PackedScene" uid="uid://cmlc6yiwuphc2" path="res://Assets/Cutscenes/Foregrounds/030_Shotglass.tscn" id="4_n2dun"]
[ext_resource type="FontFile" uid="uid://dnp1htyo3rmv4" path="res://Fonts/Stop.ttf" id="5_j37wj"]
[ext_resource type="PackedScene" uid="uid://cw0hthoxdkc04" path="res://Assets/Cursor.tscn" id="6_utvca"]

[sub_resource type="LabelSettings" id="LabelSettings_tq4ot"]
font = ExtResource("5_j37wj")
font_size = 48
font_color = Color(0.258824, 0.431373, 0.0235294, 1)

[node name="DialogPlayer" type="Node2D"]
script = ExtResource("1_uu3da")
background = ExtResource("3_7121y")
foreground = ExtResource("4_n2dun")

[node name="Background" type="Node2D" parent="."]

[node name="Foreground" type="Node2D" parent="."]
position = Vector2(0, 144)

[node name="SubtitlesLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1280, 144)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 660.0
offset_right = 1280.0
offset_bottom = 804.0
grow_horizontal = 2
grow_vertical = 0
text = "..."
label_settings = SubResource("LabelSettings_tq4ot")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Cursor" parent="." instance=ExtResource("6_utvca")]

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 1280.0
offset_bottom = 800.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="SubtitlesLabel" to="." method="_on_subtitles_label_ready"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
