[gd_scene load_steps=7 format=3 uid="uid://crjfh1ek7nwgg"]

[ext_resource type="Script" path="res://Scenes/OnBoard/DialogPlayer.gd" id="1_uu3da"]
[ext_resource type="Resource" uid="uid://3yrd38a52ldr" path="res://Assets/VegaCampaign/Season1/MissionDialogs0.tres" id="2_lsgrn"]
[ext_resource type="PackedScene" uid="uid://febouepvqdew" path="res://Assets/Cutscenes/Backgrounds/002_ShotglassWindow.tscn" id="3_7121y"]
[ext_resource type="PackedScene" uid="uid://cmlc6yiwuphc2" path="res://Assets/Cutscenes/Foregrounds/030_Shotglass.tscn" id="4_n2dun"]
[ext_resource type="FontFile" uid="uid://dnp1htyo3rmv4" path="res://Fonts/Stop.ttf" id="5_j37wj"]

[sub_resource type="LabelSettings" id="LabelSettings_tq4ot"]
font = ExtResource("5_j37wj")
font_size = 48
font_color = Color(0.258824, 0.431373, 0.0235294, 1)

[node name="DialogShotglass" type="Node2D"]
script = ExtResource("1_uu3da")

[node name="ShotglassWindow" parent="." instance=ExtResource("3_7121y")]

[node name="CutsceneCharacter" parent="." instance=ExtResource("4_n2dun")]
position = Vector2(0, 142)
mission_dialogs = ExtResource("2_lsgrn")

[node name="SubtitlesLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1280, 144)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 660.0
offset_right = 1280.0
offset_bottom = 804.0
grow_horizontal = 2
grow_vertical = 0
text = "..."
label_settings = SubResource("LabelSettings_tq4ot")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
